--- a/themes/story/layouts/partials/li.html
+++ b/themes/story/layouts/partials/li.html
@@ -1,36 +1,37 @@
 {{- $hdr := cond (or (in .Site.Params.classes "feature-nohdr") (in .Params.classes "feature-nohdr")) false true -}}
 <div class="retro-card-container">
-	<article class="retro-card">
-		<a href="{{ .Permalink }}" class="retro-card-link">
-			<div class="retro-card-inner">
-				<div class="flex flex-column flex-row-ns items-start">
-					{{ if $hdr }}
-					<div class="retro-card-image mb4 mb0-ns w-100 h4 h4-m w4-m h5-ns w5-ns br3 cover {{ if lt .Date.Unix now.Unix }}hide-child{{ end }}" style="background-image: url('{{ absURL (default "img/default-header-img.tn-500x500.jpg" (default .Params.image .Params.thumbnail)) }}'); background-position: center;">
-						<div class="retro-card-date sans-serif db child w-100 h-100 f7 lh-copy white no-underline br3 ph3 pt4 pt5-l ttu tc bg-black-60">
-							<i class="mt3 mt5-l child far {{ cond (gt .Date.Unix now.Unix) "fa-hourglass" "fa-calendar-alt" }}"></i> {{ .Date.Format "Jan 2, 2006" }}
-						</div>
+	<article class="retro-card retro-card-clickable">
+		<div class="retro-card-inner">
+			<div class="flex flex-column flex-row-ns items-start">
+				{{ if $hdr }}
+				<div class="retro-card-image mb4 mb0-ns w-100 h4 h4-m w4-m h5-ns w5-ns br3 cover {{ if lt .Date.Unix now.Unix }}hide-child{{ end }}" style="background-image: url('{{ absURL (default "img/default-header-img.tn-500x500.jpg" (default .Params.image .Params.thumbnail)) }}'); background-position: center;">
+					<div class="retro-card-date sans-serif db child w-100 h-100 f7 lh-copy white no-underline br3 ph3 pt4 pt5-l ttu tc bg-black-60">
+						<i class="mt3 mt5-l child far {{ cond (gt .Date.Unix now.Unix) "fa-hourglass" "fa-calendar-alt" }}"></i> {{ .Date.Format "Jan 2, 2006" }}
 					</div>
-					{{ end }}
-					<div class="retro-card-content w-100 w6-ns pl3-ns">
-						<div class="retro-card-meta">
-							{{ .Date.Format "Jan 2, 2006" }}
-						</div>
-						<h1 class="retro-card-title f3 fw1 mt0 lh-title">
-						{{- if eq .Section "talks" }}{{ .Params.event }}: {{ end -}}
-						{{- cond (eq .Site.Params.titlecase true) (.Title | title | markdownify) (.Title | markdownify) -}}
-						</h1>
-						<div class="retro-card-summary f6 f5-l lh-copy nested-copy-line-height nested-links">
-							{{ if eq .Section "slides" }}
-								{{ .Description | markdownify }}
-							{{ else if eq .Section "talks" }}
-								{{ .Summary }}
-							{{ else }}
-								{{ .Summary }}
-							{{ end }}
-						</div>
+				</div>
+				{{ end }}
+				<div class="retro-card-content w-100 w6-ns pl3-ns">
+					<div class="retro-card-meta">
+						{{ .Date.Format "Jan 2, 2006" }}
+					</div>
+					<h1 class="retro-card-title f3 fw1 mt0 lh-title">
+						<a href="{{ .Permalink }}" class="retro-card-main-link">
+							{{- if eq .Section "talks" }}{{ .Params.event }}: {{ end -}}
+							{{- cond (eq .Site.Params.titlecase true) (.Title | title | markdownify) (.Title | markdownify) -}}
+						</a>
+					</h1>
+					<div class="retro-card-summary f6 f5-l lh-copy nested-copy-line-height nested-links">
+						{{ if eq .Section "slides" }}
+							{{ .Description | markdownify }}
+						{{ else if eq .Section "talks" }}
+							{{ .Summary }}
+						{{ else }}
+							{{ .Summary }}
+						{{ end }}
 					</div>
 				</div>
 			</div>
-		</a>
+		</div>
+		<a href="{{ .Permalink }}" class="retro-card-overlay-link" aria-label="Read full article"></a>
 	</article>
 </div>
