--- a/themes/story/static/css/story.css
+++ b/themes/story/static/css/story.css
@@ -437,7 +437,7 @@ b.conum *{color:inherit!important}
 .conum[data-value] {
   display: inline-block;
   color: #fff!important;
-  background: rgba(0,0,0,.8);
+  background: rgba(39, 228, 74, 0.745);
   border-radius: 50%;
   text-align: center;
   font-size: .75em;
