Update favicon, animate home button

--- a/themes/story/layouts/_default/baseof.html
+++ b/themes/story/layouts/_default/baseof.html
@@ -79,7 +79,14 @@
 
 				<nav class="hide-print sans-serif {{ cond $hdr "" "bg-black" }} border-box pa3 ph5-l">
 					<a href="{{ .Site.BaseURL }}" title="Home">
-						<img src="{{ "img/logo.jpg" | absURL }}" class="w2 h2 br-100" alt="{{ .Site.Title }}" />
+						<link rel="preload" as="image" href="{{ "img/repton.gif" | absURL }}">
+						<img
+							src="{{ "img/logo.jpg" | absURL }}"
+							class="w2 h2 br-100"
+							alt="{{ .Site.Title }}"
+							onmouseover="this.src='{{ "img/repton.gif" | absURL }}';"
+							onmouseout="this.src='{{ "img/logo.jpg" | absURL }}';"
+						/>
 					</a>
 					<div class="fr h2 pv2 tr">
 						{{- range .Site.Menus.main }}
