fix image shadows

--- a/themes/story/static/css/story.css
+++ b/themes/story/static/css/story.css
@@ -583,3 +583,9 @@ table{border-collapse:collapse;border-spacing:0}
 .admonitionblock.tip .title {
     font-weight: bold;
 }
+
+span.image img {
+  border: 3px solid rgba(127, 77, 77, 0.312);
+  box-shadow: 4px 2px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 6px;
+}
