Add Freedium mirroring

--- a/themes/story/layouts/_default/baseof.html
+++ b/themes/story/layouts/_default/baseof.html
@@ -62,6 +62,7 @@
 		{{ . | safeHTML }}{{ end }}{{ end }}
 		<script src="{{ "js/story.js" | absURL }}"></script>
 		<script src="{{ "js/toc.js" | absURL }}"></script>
+		<script src="{{ "js/medium-mirror.js" | absURL }}"></script>
 
 	</head>
 	<body class="ma0 bg-white {{ with .Section }}section-{{ . }}{{ end }} page-kind-{{ .Kind }} is-page-{{ .IsPage }} {{ with .Site.Params.classes }}{{ range . }} {{ . }}{{ end }}{{ end }}{{ with .Params.classes }}{{ range . }} {{ . }}{{ end }}{{ end }}">
