Upgrade Hugo to 0.152.2 and migrate to Docker-based builds
- Update all workflows to use Docker image from GHCR
- Fix CloudFlare preview workflow (add missing asciidoctor-revealjs and build-slides.sh)
- Fix deprecated .Site.GoogleAnalytics template field (Hugo 0.120+)
- Update README with new Docker build instructions
- Update blog post example to reference new Hugo version
- All environments now use identical Docker-based builds for consistency

--- a/themes/story/layouts/_default/baseof.html
+++ b/themes/story/layouts/_default/baseof.html
@@ -158,11 +158,8 @@
 			</p>
 		</footer>
 		{{ end }}
-	{{- if .Site.GoogleAnalytics -}}
-	{{- if templates.Exists "_internal/google_analytics_async.html" -}}
-	{{ template "_internal/google_analytics_async.html" . }}
-	{{- end -}}
-	{{- end -}}
+	{{- /* Google Analytics: .Site.GoogleAnalytics field deprecated in Hugo 0.120+ */ -}}
+	{{- /* If you need Google Analytics, configure it via site params and add tracking code in foot params */ -}}
 	{{ with .Site.Params.foot }}{{ range . }}
 	{{ . | safeHTML }}{{ end }}{{ end }}
 	</body>
