Focus in text box on load

--- a/layouts/_default/search.html
+++ b/layouts/_default/search.html
@@ -82,6 +82,9 @@
             if (searchInput) {
                 clearInterval(checkForInput);
 
+                // Auto-focus the search input
+                searchInput.focus();
+
                 const initialQuery = getQueryFromURL();
                 if (initialQuery) {
                     searchInput.value = initialQuery;
